Fix accidental extra padding around body

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -77,10 +77,6 @@ main {
   flex-flow: column;
 }
 
-header, main, footer {
-  padding: var(--spacing-2) var(--spacing-4);
-}
-
 h1 {
   font-size: var(--spacing-8);
 }
